--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,3 +1,6 @@
+v0.1.2  21st May 2022
+* Added color-scheme: dark
+
 v0.1.1 	25th April 2022
 * Added player cost, and captain indicator to teams
 * Added player profile link to teams
