--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,3 +1,6 @@
+v1.1.0 	14th April 2023
+* Fixed performance issues with Redis and Postgres
+
 v1.0.5 	27th March 2023
 * Adjusted true wr% formula to exclude disc, saves, and ties
 
