--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,3 +1,6 @@
+v1.1.1 	15th April 2023
+* Upgraded DB server, and removed Redis
+
 v1.1.0 	14th April 2023
 * Fixed performance issues with Redis and Postgres
 
