--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,5 +1,8 @@
+v1.1.3 	19th April 2023
+* Imported season: eltp 18 majors
+
 v1.1.2 	18th April 2023
-* Imported season: eltp 20 majors
+* Imported season: eltp 20 majors, eltp 19 majors
 * Setup cron to automate spy updates
 
 v1.1.1 	15th April 2023
