--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,3 +1,8 @@
+v1.2.0 	11th May 2023
+* Replaced MVB formula with GASP
+* Added new stats: GASP, dGASP, and oGASP
+* Added new leaders: grab / flaccid
+
 v1.1.3 	19th April 2023
 * Imported season: eltp 18 majors
 
