--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,3 +1,7 @@
+v1.2.1 	12th May 2023
+* Added trophy cabinet to player overview
+* Added +/- to player matches
+
 v1.2.0 	11th May 2023
 * Replaced MVB formula with GASP
 * Added new stats: GASP, dGASP, and oGASP
