--- a/public/changelog.txt
+++ b/public/changelog.txt
@@ -1,3 +1,11 @@
+v1.9.0 	29th Apr 2025
+* Switched Gulp to ESBuild
+* Added Admin Panel
+
+v1.8.0 	28th Apr 2025
+* Fixed the GASP bug on matches/playoffs
+* Fixed the player profile matches bug
+
 v1.7.0 	12th Aug 2024
 * Fixed spy page
 * Added decay to Rank Pub
